--- a/pug/index.pug
+++ b/pug/index.pug
@@ -1,12 +1,4 @@
-doctype html
-html(lang="en")
-    head
-        title= 'Title'
-        link(rel='stylesheet', href='../css/index.css', type='text/css' )
-        link(rel='stylesheet', href='../css/base.css', type='text/css' )
-    body
-        .wrap
-            include block/header.pug
-            block content
-        include block/footer.pug
-        include block/scripts.pug
+extends base
+
+block content
+    .container test page
