--- a/pug/base.pug
+++ b/pug/base.pug
@@ -5,6 +5,7 @@ html(lang="en")
         link(rel='stylesheet', href='../css/index.css', type='text/css' )
         link(rel='stylesheet', href='../css/base.css', type='text/css' )
         meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
+        meta(charset="utf-8")
     body
         .wrap
             include block/header.pug
