--- a/css/old.css
+++ b/css/old.css
@@ -1,282 +1,4 @@
 @charset "UTF-8";
-body {
-  padding: 0;
-}
-
-::before, ::after {
-  box-sizing: border-box;
-}
-
-.clearfix:before, .clearfix:after {
-  content: " ";
-  display: table;
-}
-
-.clearfix:after {
-  clear: both;
-}
-
-.container {
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 1400px) {
-  .container {
-    width: 1140px;
-  }
-}
-@media (min-width: 1200px) and (max-width: 1399px) {
-  .container {
-    width: 1140px;
-  }
-}
-@media (min-width: 1025px) and (max-width: 1199px) {
-  .container {
-    width: 970px;
-  }
-}
-@media (min-width: 768px) and (max-width: 1024px) {
-  .container {
-    width: 750px;
-  }
-}
-@media (max-width: 767px) {
-  .container {
-    width: 100%;
-  }
-}
-
-.column-js, .column-jc, .ae-jb, .as-jc, .jb, .as-jb, .ac-jb, .ac-jc, .as, .ac, .flex {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-}
-
-.ae-jb, .jb, .as-jb, .ac-jb {
-  -webkit-justify-content: space-between;
-  -moz-justify-content: space-between;
-  -ms-justify-content: space-between;
-  justify-content: space-between;
-  -ms-flex-pack: space-between;
-}
-
-.column-js {
-  -webkit-justify-content: flex-start;
-  -moz-justify-content: flex-start;
-  -ms-justify-content: flex-start;
-  justify-content: flex-start;
-  -ms-flex-pack: flex-start;
-}
-
-.column-jc, .as-jc, .ac-jc {
-  -webkit-justify-content: center;
-  -moz-justify-content: center;
-  -ms-justify-content: center;
-  justify-content: center;
-  -ms-flex-pack: center;
-}
-
-.ac-jb, .ac-jc, .ac {
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  align-items: center;
-}
-
-.as-jc, .as-jb, .as {
-  -webkit-align-items: flex-start;
-  -moz-align-items: flex-start;
-  -ms-align-items: flex-start;
-  align-items: flex-start;
-}
-
-.column-js, .column-jc {
-  -webkit-flex-direction: column;
-  -moz-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-}
-
-.flex-wrap {
-  -webkit-flex-wrap: wrap;
-  -moz-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-}
-
-.ae-jb {
-  -webkit-align-items: flex-end;
-  -moz-align-items: flex-end;
-  -ms-align-items: flex-end;
-  align-items: flex-end;
-}
-
-.shrink {
-  -webkit-flex-shrink: 0;
-  -moz-flex-shrink: 0;
-  -ms-flex-shrink: 0;
-  flex-shrink: 0;
-}
-
-@font-face {
-  font-family: "ProximaNova";
-  font-weight: 400;
-  src: url("/fonts/ProximaNova-Regular.ttf") format("truetype"), url("/fonts/ProximaNova-Regular.woff") format("woff"), url("/fonts/ProximaNova-Regular.woff2") format("woff2");
-}
-@font-face {
-  font-family: "ProximaNova";
-  font-weight: 300;
-  src: url("/fonts/ProximaNova-Thin.ttf") format("truetype"), url("/fonts/ProximaNova-Thin.woff") format("woff"), url("/fonts/ProximaNova-Thin.woff2") format("woff2");
-}
-@font-face {
-  font-family: "ProximaNova";
-  font-weight: 600;
-  src: url("/fonts/ProximaNova-SemiBold.ttf") format("truetype"), url("/fonts/ProximaNova-SemiBold.woff") format("woff"), url("/fonts/ProximaNova-SemiBold.woff2") format("woff2");
-}
-* {
-  margin: 0;
-  padding: 0;
-  font-size: 100%;
-  vertical-align: baseline;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-*:focus {
-  outline: none;
-}
-
-body {
-  line-height: 1;
-}
-
-button {
-  border: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-table {
-  border-spacing: 0;
-}
-
-@-moz-document url-prefix() {
-  body {
-    letter-spacing: -0.09px;
-  }
-}
-/* Slider */
-.slick-slider {
-  position: relative;
-  display: block;
-  box-sizing: border-box;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-touch-callout: none;
-  -khtml-user-select: none;
-  -ms-touch-action: pan-y;
-  touch-action: pan-y;
-  -webkit-tap-highlight-color: transparent;
-}
-
-.slick-list {
-  position: relative;
-  display: block;
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
-}
-
-.slick-list:focus {
-  outline: none;
-}
-
-.slick-list.dragging {
-  cursor: pointer;
-  cursor: hand;
-}
-
-.slick-slider .slick-track,
-.slick-slider .slick-list {
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0);
-  -o-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-
-.slick-track {
-  position: relative;
-  top: 0;
-  left: 0;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.slick-track:before,
-.slick-track:after {
-  display: table;
-  content: "";
-}
-
-.slick-track:after {
-  clear: both;
-}
-
-.slick-loading .slick-track {
-  visibility: hidden;
-}
-
-.slick-slide {
-  display: none;
-  float: left;
-  height: 100%;
-  min-height: 1px;
-}
-
-[dir=rtl] .slick-slide {
-  float: right;
-}
-
-.slick-slide img {
-  display: block;
-}
-
-.slick-slide.slick-loading img {
-  display: none;
-}
-
-.slick-slide.dragging img {
-  pointer-events: none;
-}
-
-.slick-initialized .slick-slide {
-  display: block;
-}
-
-.slick-loading .slick-slide {
-  visibility: hidden;
-}
-
-.slick-vertical .slick-slide {
-  display: block;
-  height: auto;
-  border: 1px solid transparent;
-}
-
-.slick-arrow.slick-hidden {
-  display: none;
-}
-
 .breadcrumbs-wrap {
   background-color: #303030;
   padding: 12px 0;
@@ -762,19 +484,19 @@ h1 {
 @font-face {
   font-family: MyriadSetPro;
   /* Гарнитура шрифта */
-  src: url("../font/myriad-set-pro_text.ttf");
+  src: url(../font/myriad-set-pro_text.ttf);
   /* Путь к файлу со шрифтом */
 }
 @font-face {
   font-family: AGFriquerc;
   /* Гарнитура шрифта */
-  src: url("../font/agfriquerc.otf");
+  src: url(../font/agfriquerc.otf);
   /* Путь к файлу со шрифтом */
 }
 @font-face {
   font-family: RosaMarena;
   /* Гарнитура шрифта */
-  src: url("../font/RosaMarena.ttf");
+  src: url(../font/RosaMarena.ttf);
   /* Путь к файлу со шрифтом */
 }
 .currency {
@@ -2397,6 +2119,7 @@ h1 {
 
 .wrapper-input-number {
   width: 50%;
+  border: 1px solid #181818;
   font-size: 21px;
   line-height: 1.2;
   font-weight: 500;
@@ -2606,4 +2329,4 @@ input[type=number] {
   }
 }
 
-/*# sourceMappingURL=index.css.map */
+/*# sourceMappingURL=old.css.map */
