--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -15,6 +15,14 @@ body {
   line-height: 1;
 }
 
+button{
+  border: none;
+}
+
+a{
+  text-decoration: none;
+}
+
 table {
   border-spacing: 0;
 }
