--- a/css/index.css
+++ b/css/index.css
@@ -294,12 +294,17 @@ table {
   -moz-align-items: center;
   -ms-align-items: center;
   align-items: center;
+  margin-bottom: 0;
+  margin-left: 0;
 }
 
 .breadcrumbs li {
   margin-right: 10px;
   padding-right: 20px;
   position: relative;
+  list-style: none;
+  margin-left: 0;
+  margin-bottom: 0;
 }
 
 .breadcrumbs li:after {
@@ -345,15 +350,64 @@ table {
 .row-item .left-item {
   width: 38%;
 }
+@media (max-width: 1024px) {
+  .row-item .left-item {
+    width: 50%;
+  }
+}
+@media (hover: none) and (pointer: coarse) {
+  .row-item .left-item {
+    width: 50%;
+  }
+}
+@media (max-width: 767px) {
+  .row-item .left-item {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+}
 
 .row-item .center-item {
   padding-left: 30px;
   width: 32%;
 }
+@media (max-width: 1024px) {
+  .row-item .center-item {
+    width: 50%;
+  }
+}
+@media (hover: none) and (pointer: coarse) {
+  .row-item .center-item {
+    width: 50%;
+  }
+}
+@media (max-width: 767px) {
+  .row-item .center-item {
+    width: 100%;
+  }
+}
 
 .row-item .right-item {
   width: 30%;
   padding-left: 30px;
+}
+@media (max-width: 1024px) {
+  .row-item .right-item {
+    padding-top: 50px;
+    width: 100%;
+    padding-left: 0;
+    max-width: 400px;
+    margin: auto;
+  }
+}
+@media (hover: none) and (pointer: coarse) {
+  .row-item .right-item {
+    padding-top: 50px;
+    width: 100%;
+    padding-left: 0;
+    max-width: 400px;
+    margin: auto;
+  }
 }
 
 .row-item .description-small {
@@ -684,6 +738,7 @@ h1 {
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
+  border: none;
   display: flex;
   -webkit-align-items: center;
   -moz-align-items: center;
@@ -2604,6 +2659,138 @@ input[type=number] {
   .slider__item-disc {
     padding-top: 100px;
   }
+}
+.new-slider-wrap {
+  font-family: MyriadSetPro;
+}
+.new-slider-wrap .slider-title {
+  width: 100%;
+  text-align: center;
+  font-size: 21px;
+  position: relative;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+}
+.new-slider-wrap .slider-title span {
+  padding: 0 20px;
+  z-index: 1;
+  letter-spacing: 0.4em;
+  text-transform: uppercase;
+  background-color: #ededed;
+}
+.new-slider-wrap .slider-title:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  top: 50%;
+  background-color: #5f5f5f;
+}
+.new-slider-wrap .catalog-item {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  position: relative;
+}
+.new-slider-wrap .catalog-item:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 5%;
+  width: 100%;
+  height: 90%;
+  background-color: #181818;
+  z-index: -1;
+}
+.new-slider-wrap .catalog-item .left {
+  max-width: 130px;
+  max-height: 250px;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+}
+.new-slider-wrap .catalog-item .left img {
+  max-height: 100%;
+}
+.new-slider-wrap .catalog-item .item-info {
+  padding-top: 25px;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+.new-slider-wrap .catalog-item .item-info .top-line {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  margin-bottom: 10px;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  -ms-justify-content: space-between;
+  justify-content: space-between;
+  -ms-flex-pack: space-between;
+}
+.new-slider-wrap .catalog-item .type {
+  font-size: 14px;
+  color: #6a6d6d;
+  margin-bottom: 5px;
+}
+.new-slider-wrap .catalog-item .title {
+  text-transform: uppercase;
+  color: #ffffff;
+  font-size: 21px;
+  margin-bottom: 25px;
+}
+.new-slider-wrap .catalog-item .price {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: flex-start;
+  -moz-align-items: flex-start;
+  -ms-align-items: flex-start;
+  align-items: flex-start;
+  color: #ffd800;
+  font-size: 21px;
+}
+.new-slider-wrap .catalog-item .price span {
+  font-size: 14px;
+  color: #5f5f5f;
+  margin-left: 4px;
+}
+.new-slider-wrap .catalog-item .wish-button {
+  width: 22px;
+  height: 22px;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url("../images/header_icon/header_4.png");
 }
 
 /*# sourceMappingURL=index.css.map */
