--- a/sass/index.scss
+++ b/sass/index.scss
@@ -34,4 +34,5 @@ body{padding: 0;}
 //layouts
 //@import "layouts/header";
 @import "layouts/old";
+@import "layouts/new-catalog-slider";
 //@import "layouts/footer";
